added simple filtering to the API
